--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -54,5 +54,5 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           # 给清单打上多个标签
           tags: |
-            kubehan/promai:${{ steps.date.outputs.today }}
+            kubehan/promai:${{ github.ref_name }}-${{ github.run_number }}
             kubehan/promai:latest
