--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Get current date
         id: date
-        run: echo "::set-output name=today::$(date +'%Y-%m-%d_%H-%M')"
+        run: echo "::set-output name=today::$(date +'%Y%m%d%H%M')"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
