--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get current date
-        id: date
+        id: formatted_date
         run: echo "::set-output name=today::$(date +'%Y%m%d%H%M')"
 
       - name: Set up QEMU
@@ -54,5 +54,5 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           # 给清单打上多个标签
           tags: |
-            kubehan/promai:${{ github.ref_name }}-${{ github.run_number }}
+            kubehan/promai:${{ github.ref_name }}-${{ steps.date.outputs.today }}
             kubehan/promai:latest
