--- a/.github/workflows/follow.yml
+++ b/.github/workflows/follow.yml
@@ -20,8 +20,8 @@ jobs:
           pat: ${{ secrets.ACCESS_TOKEN }}
       - name: Commit changes
         run: |
-          git config --local user.email "eryajf@163.com"
-          git config --local user.name "eryajf"
+          git config --local user.email "kubehan@163.com"
+          git config --local user.name "Kubehan"
           git add -A
           git diff-index --quiet HEAD || git commit -m "Update GitHub followers"
       - name: Pull changes
