--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,8 +24,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get current date
-        id: formatted_date
-        run: echo "::set-output name=today::$(date +'%Y%m%d%H%M')"
+        id: date
+        run: echo "::set-output name=today::$(date +'%Y-%m-%d_%H-%M')"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
