--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,4 @@
 prometheus_url: "http://prometheus.monitoring.svc.cluster.local:9090"
-
-
 metric_types:
   - type: "基础资源使用情况"
     metrics:
@@ -10,6 +8,8 @@ metric_types:
         threshold: 80
         threshold_type: "greater"
         unit: "%"
+        labels:
+          instance: "节点"
       
       - name: "内存使用率"
         description: "节点内存使用率统计"
@@ -17,6 +17,8 @@ metric_types:
         threshold: 85
         threshold_type: "greater"
         unit: "%"
+        labels:
+          instance: "节点"
 
       - name: "磁盘使用率"
         description: "节点磁盘使用率统计"
@@ -28,6 +30,13 @@ metric_types:
         threshold: 80
         threshold_type: "greater"
         unit: "%"
+        labels:
+          instance: "节点"
+          mountpoint: "挂载点"
+          device: "磁盘"
+          nodename: "节点名称"
+
+
       - name: "固定机器内存使用率"
         description: "固定机器内存使用率统计"
         query: >-
@@ -35,6 +44,10 @@ metric_types:
         threshold: 16.84
         threshold_type: "greater"
         unit: "%"
+        labels:
+          instance: "节点"
+
+
   - type: "PaaS平台巡检"
     metrics:
       - name: "K8s集群关键服务"
@@ -45,7 +58,11 @@ metric_types:
         unit: ""
         labels:
           component: "服务名称"
-          describe: "服务描述"
+          namespace: "命名空间"
+          # describe: "服务描述"
+          hostname: "主机名称"
+          owner: "负责人"
+          instance: "节点"
 
   - type: "kubernetes集群监控状态"
     metrics:
@@ -94,48 +111,9 @@ metric_types:
         description: "持久化存储使用率"
         query: >-
           100 * (1 - kubelet_volume_stats_available_bytes / kubelet_volume_stats_capacity_bytes)
-        threshold: 88
+        threshold: 90
         threshold_type: "greater"
         unit: "%"
         labels:
           namespace: "命名空间"
           persistentvolumeclaim: "PVC名称"
-
-  # - type: "application"
-  #   metrics:
-  #     - name: "服务可用性"
-  #       description: "关键服务健康检查"
-  #       query: "up{job=~'.*service.*'}"
-  #       threshold: 1
-  #       unit: ""
-  #       labels:
-  #         job: "服务名称"
-  #         instance: "实例"
-
-  #     - name: "HTTP请求错误率"
-  #       description: "服务HTTP 5xx错误率"
-  #       query: >-
-  #         sum(rate(http_requests_total{status=~"5.."}[5m])) by (service) 
-  #         / sum(rate(http_requests_total[5m])) by (service) * 100
-  #       threshold: 5
-  #       unit: "%"
-  #       labels:
-  #         service: "服务"
-
-  #     - name: "服务响应延迟"
-  #       description: "服务P95响应时间"
-  #       query: "histogram_quantile(0.95, sum(rate(http_request_duration_seconds_bucket[5m])) by (le, service))"
-  #       threshold: 1
-  #       unit: "s"
-  #       labels:
-  #         service: "服务"
-
-  # - type: "network"
-  #   metrics:
-  #     - name: "TCP连接状态"
-  #       description: "TCP连接状态统计"
-  #       query: "node_netstat_Tcp_CurrEstab"
-  #       threshold: 10000
-  #       unit: ""
-  #       labels:
-  #         instance: "节点"
